--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: message_cal
-description: "안드로이드 문자 메시지와 카카오톡 등 SNS 앱에서 받은 메시지를 선택하여 구글 캘린더에 자동으로 분류하고 일정으로 등록하는 스마트 캘린더 연동 앱"
+description: "S2C - 메시지를 캘린더로. 안드로이드 문자 메시지와 카카오톡 등 SNS 앱에서 받은 메시지를 선택하여 구글 캘린더에 자동으로 분류하고 일정으로 등록하는 스마트 캘린더 연동 앱"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -43,6 +43,9 @@ dependencies:
   shared_preferences: ^2.0.0
   sqflite: ^2.0.0
   url_launcher: ^6.0.0
+  google_generative_ai: ^0.4.1
+  path: ^1.9.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "public/stoc.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,9 +79,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - public/banner.jpg
+    - public/stoc.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
